<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sergey.organizer.MainActivity">

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/item_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/item_sort"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_edit_sort_delete"
        android:icon="@android:drawable/ic_menu_more"
        android:orderInCategory="100"
        android:title="@string/item_sort_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new_event"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/item_add_event"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_event_check_done"
        android:icon="@drawable/ic_playlist_add_check_white_24dp"
        android:title="done"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_events_list"
        android:icon="@drawable/ic_list_white_24dp"
        android:orderInCategory="100"
        android:title="@string/item_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save_event"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/item_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_action_done"
        android:title="@string/item_done"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_insert_invitation_white_24dp"
        android:title="@string/title_calendar"
        app:showAsAction="ifRoom" />


</menu>
